    it can be configured via local kernel meta: "split_dirs":{"module UOA":N} 
  * improved "ck help" function
  * added support for the latest ElasticSearch via Python client
  * improved CK search via ElasticSearch
  * added possibility to auto convert all entry names to lower case;
    it can be configured via local kernel meta: "force_lower":"yes"
  * added check for allowed entry names;
    it can be configured as RE via local kernel meta: "allowed_entry_names": "^[A-Za-z0-9_@. -]*$"
  * added check for allowed action names in modules;
    it can be configured as RE via local kernel meta: "allowed_action_names": "^[A-Za-z_-]*$"

* V1.10.3
  * fixed major bug with kernel version checking

* V1.10.2
  * fixed mistake in PyPi release

* V1.10.1
  * added support for setuptools
  * added report on Python executable used by CK
  * recording python executable to ck-python.cfg during installation -
    it can now be used by default when calling CK CLI
  * added experimental functionality to automatically download 
    missing components from cKnowledge.org.
    It is turned off by default. 
    To turn it on use "ck set kernel var.download_missing_components=yes"

* V1.9.9
  * fixed installation bug (non UTF-8 character)

* V1.9.8
  * improved OpenME to call CK in dynamic websites
  * added passing of $_SESSION, $_POST, $_GET to CK via OpenME
  * added "Access-Control-Allow-Origin=*" to module:web 
    to be able to access CK from local web pages
  * fixed CK execution with Anaconda python (Linux and MacOS) 
    when installed via pip
  * added possibility to change default repo 
    using "CK_DEFAULT_REPO" env var
  * added flag --module_version to use different Python module:
    (module{.{module_version}}.py)

* V1.9.7
  * allowed local widget to fetch data from cKnowledge.org (or other) website:
    https://github.com/ctuning/ck/pull/93
  * automatically print API of redirected functions (ck <action> <module> --help)
  * improved module API printing