@@ -1,14 +1,0 @@
-=======================================================================
-N: Grigori Fursin
-E: Grigori.Fursin@cTuning.org
-H: http://fursin.net/research.html
-O: cTuning foundation / dividiti
-C: original concept and design, real-world use cases
-W: since 1 November 2014 
-=======================================================================
-N: Anton Lokhmotov
-E: anton@dividiti.com
-H: https://www.hipeac.net/~anton
-O: dividiti
-C: real-world use cases
-W: since 1 March 2015
