@@ -1,4 +1,3 @@
-include AUTHORS.txt
 include CHANGES.txt
 include CONTRIBUTIONS.txt
 include COPYRIGHT.txt
